# servo

./: Cargo.toml  README.md
.cargo/: config.toml
keys/: id_ed25519
src/: commands.rs  control.rs  database.rs  database_schema.sql  error.rs  flight.rs  forwarding.rs  lib.rs  main.rs  protocol.rs
src/ctrl/: testing.rs
src/emulator/: mod.rs  sam.rs
src/extractors/: hostname.rs  mod.rs  user.rs
src/hitl/: testing.rs
src/interface/: display.rs
src/middleware/: logging.rs  mod.rs
src/migrations/1/: up.sql
src/migrations/4/: up.sql
src/migrations/5/: down.sql  up.sql
src/protocol/: request.rs  response.rs
src/routes/: admin.rs  auth.rs  authed.rs  command.rs  data.rs  hitl.rs  mappings.rs  meta.rs  mod.rs  sequence.rs
src/server/: database.rs  error.rs  flight.rs  forwarding.rs  mod.rs
src/server/routes/: admin.rs  command.rs  data.rs  mappings.rs  mod.rs  sequence.rs  trigger.rs
src/tool/: clean.rs  deploy.rs  emulate.rs  export.rs  locate.rs  log.rs  mod.rs  run.rs  serve.rs  sql.rs  task.rs  upload.rs
tests/routes/: admin.rs  mod.rs
