[package]
name = "servo"
authors = ["Jeff Shelton"]
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6"
actix-web = "4.2"
anyhow = "1.0"
base64 = "0.13"
clap = "4.4.6"
common = { git = "ssh://git@github-research.gatech.edu/YJSP/common" }
dns-lookup = "2.0"
fs-protobuf-rust = { git = "ssh://git@github-research.gatech.edu/YJSP/fs-protobuf-rust" }
include_dir = "0.7"
postcard = { version = "1.0", features = ["alloc"] }
quick-protobuf = "0.8"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssh2 = "0.9"
sysinfo = "0.29"
tokio = { version = "1.23", features = ["macros", "rt-multi-thread", "fs"] }
uuid = { version = "1.2", features = ["v4"] }

[[bin]]
name = "servo"
