[package]
name = "servo"
authors = ["Jeff Shelton"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
base64 = "0.13"
clap = "4.4"
common = { git = "ssh://git@github-research.gatech.edu/YJSP/common", features = ["rusqlite"] }
include_dir = "0.7"
jeflog = "0.1"
openssl = { version = "0.10", features = ["vendored"] }
postcard = { version = "1.0", features = ["alloc"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
sqlx = "0.7.3"
ssh2 = "0.9"
sysinfo = "0.29"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tower-http = { version = "0.5", features = ["cors"] }

[[bin]]
name = "servo"
