[package]
name = "servo"
authors = ["Jeff Shelton"]
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6"
actix-web = "4.5"
anyhow = "1.0"
base64 = "0.13"
clap = "4.4.6"
common = { git = "https://github.com/gt-space/common.git", features = ["rusqlite"] }
dns-lookup = "2.0"
hdf5 = { git = "https://github.com/aldanor/hdf5-rust.git", features = ["static", "zlib"]}
include_dir = "0.7"
jeflog = "0.1"
openssl = { version = "0.10", features = ["vendored"] }
postcard = { version = "1.0", features = ["alloc"] }
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking", "json"] }
rusqlite = { version = "0.30", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
ssh2 = "0.9"
sysinfo = "0.29"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }
tokio-stream = { version = "0.1", features = ["sync"] }

[[bin]]
name = "servo"
